tests/files/type_checker_tests/should_pass/062.cmdr
//Test that negate operations type check
x = 2;
y = -[1, 2, 3][x];
