tests/files/type_checker_tests/should_fail/098.cmdr
//Should fail if negate operation on something not an int/float
x = -[1, 2];
